BARC UAT/src/objects/AsyncQueue__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Collection_Status__c</fullName>
        <label>Error Collection Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRetry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRetry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_id__c</fullName>
        <label>Job id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retry_Count__c</fullName>
        <label>Retry Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>AsyncQueue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AsyncQueue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AsyncQueue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>